Tests and CalculateScore refined, refactoring, cubic cooridinates intorduced, looks changed